--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <script>
 
       var loader = document.getElementById("preloader");
-      window.addEventListener("load",function(){
+      window.addEventListener("DOMContentLoaded",function(){
         loader.style.display = "none";
       })
 
